include_directories(${CMAKE_CURRENT_SOURCE_DIR})

cm_example_project("DataType" UbyteColor            color_test_example.cpp)
cm_example_project("DataType" SplitStringTest       SplitStringTest.cpp)
cm_example_project("DataType" StrChrTest            strchr_test.cpp)
cm_example_project("DataType" Uint2StrTest          utos_test.cpp)
cm_example_project("DataType" Size2Test             Size2Test.cpp)
cm_example_project("DataType" MemcmpTest            MemcmpTest.cpp)
cm_example_project("DataType" Uint2HexStrTest       Uint2HexStrTest.cpp)
cm_example_project("DataType" ConstStringSetTest    ConstStringSetTest.cpp)
cm_example_project("DataType" ConstStringSetDebug   ConstStringSetDebug.cpp)
cm_example_project("DataType" HashIDMapTest         HashIDMapTest.cpp)
cm_example_project("DataType" UnorderedMapTest      UnorderedMapTest.cpp)
cm_example_project("DataType" IDNameTest            IDNameTest.cpp)
cm_example_project("DataType" IDObjectManagerTest   IDObjectManagerTest.cpp)

cm_example_project("DataType/ActiveManager" 1_ActiveIDManagerTest           ActiveIDManagerTest.cpp)
cm_example_project("DataType/ActiveManager" 2_ActiveIDManagerGetIdleViewTest ActiveIDManagerGetIdleViewTest.cpp)
cm_example_project("DataType/ActiveManager" 3_ActiveMemoryBlockManagerTest  ActiveMemoryBlockManagerTest.cpp)
cm_example_project("DataType/ActiveManager" 4_ActiveDataManagerTest2Staged  ActiveDataManagerTest2Staged.cpp)
cm_example_project("DataType/ActiveManager" 5_ActiveDataManagerTest         ActiveDataManagerTest.cpp)
cm_example_project("DataType/ActiveManager" 6_ActiveIDManagerEnhancedTest   ActiveIDManagerEnhancedTest.cpp)

cm_example_project("DataType/ActiveManager" BugTest_ValueBufferShallowCopyDemo	ValueBufferShallowCopyDemo.cpp)

add_subdirectory(ram)
add_subdirectory(collection)
