cm_example_project("DataType/Collection" CollectionTest                 CollectionTest.cpp)
cm_example_project("DataType/Collection" CollectionTestComprehensive    CollectionTestComprehensive.cpp)
cm_example_project("DataType/Collection" ValueArrayTest                 ValueArrayTest.cpp)
cm_example_project("DataType/Collection" QuickTest                      QuickTest.cpp)
cm_example_project("DataType/Collection" MinimalTest                    MinimalTest.cpp)
cm_example_project("DataType/Collection" FixVerificationTest            FixVerificationTest.cpp)

add_subdirectory(stack)
add_subdirectory(ValueBuffer)
add_subdirectory(OrderedSet)

cm_example_project("DataType/Collection" QueueTest              QueueTest.cpp)
cm_example_project("DataType/Collection" PoolTest               PoolTest.cpp)
cm_example_project("DataType/Collection" ListTest               ListTest.cpp)
cm_example_project("DataType/Collection" ListAndObjectListTest  ListAndObjectListTest.cpp)
cm_example_project("DataType/Collection" IndexedListTest        IndexedListTest.cpp)
cm_example_project("DataType/Collection" MapTest                MapTest.cpp)
cm_example_project("DataType/Collection" StringSetTest          StringSetTest.cpp)
cm_example_project("DataType/Collection" StringListTest         StringListTest.cpp)
cm_example_project("DataType/Collection" GetLastTest            GetLastTest.cpp)
cm_example_project("DataType/Collection" BlockAllocatorTest     BlockAllocatorTest.cpp)
cm_example_project("DataType/Collection" BlockAllocatorTest2    BlockAllocatorTest2.cpp)
cm_example_project("DataType/Collection" MonotonicIDListTest    MonotonicIDListTest.cpp)
cm_example_project("DataType/Collection" FlatTreeTest           FlatTreeTest.cpp)
